// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PortfolioHeader > connected user > should render header for own wallet 1`] = `
<div>
  <div
    class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 gap-[12px] mt-[8px] pt-[16px] bg-surface1 z-[var(--c-z)] [transition:var(--c-t)] sticky top-[var(--c-top)]"
    data-testid="portfolio-header"
    style="--c-z: 980; --c-t: gap 200ms ease; --c-top: 72px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[16px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          data-compact="true"
          data-testid="address-display"
        >
          Address Display Mock
        </div>
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[8px]"
        >
          <div
            data-testid="more-menu"
          >
            More Menu Mock
          </div>
          <div
            data-testid="share-button"
          >
            Share Button Mock
          </div>
          <div
            data-testid="network-filter"
          >
            Network Filter Mock
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[12px] [transition:var(--c-t)]"
      style="--c-t: gap 200ms ease;"
    >
      <div
        data-testid="portfolio-tabs"
      >
        Portfolio Tabs Mock
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioHeader > connected user > should render header in expanded state 1`] = `
<div>
  <div
    class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 gap-[40px] mt-[8px] pt-[16px] bg-surface1 z-[var(--c-z)] [transition:var(--c-t)] sticky top-[var(--c-top)]"
    data-testid="portfolio-header"
    style="--c-z: 980; --c-t: gap 200ms ease; --c-top: 72px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[16px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          data-compact="false"
          data-testid="address-display"
        >
          Address Display Mock
        </div>
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[8px]"
        >
          <div
            data-testid="more-menu"
          >
            More Menu Mock
          </div>
          <div
            data-testid="share-button"
          >
            Share Button Mock
          </div>
          <div
            data-testid="network-filter"
          >
            Network Filter Mock
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px] [transition:var(--c-t)]"
      style="--c-t: gap 200ms ease;"
    >
      <div
        data-testid="portfolio-tabs"
      >
        Portfolio Tabs Mock
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioHeader > external wallet view > should render header with share button for external wallet 1`] = `
<div>
  <div
    class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 gap-[40px] mt-[8px] pt-[16px] bg-surface1 z-[var(--c-z)] [transition:var(--c-t)] sticky top-[var(--c-top)]"
    data-testid="portfolio-header"
    style="--c-z: 980; --c-t: gap 200ms ease; --c-top: 72px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[16px]"
    >
      <div
        class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between gap-[12px]"
      >
        <div
          data-compact="false"
          data-testid="address-display"
        >
          Address Display Mock
        </div>
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[8px]"
        >
          <div
            data-testid="more-menu"
          >
            More Menu Mock
          </div>
          <div
            data-testid="share-button"
          >
            Share Button Mock
          </div>
          <div
            data-testid="network-filter"
          >
            Network Filter Mock
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px] [transition:var(--c-t)]"
      style="--c-t: gap 200ms ease;"
    >
      <div
        data-testid="portfolio-tabs"
      >
        Portfolio Tabs Mock
      </div>
    </div>
  </div>
</div>
`;
